// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Skeleton Box skeleton loaded 1`] = `
<DocumentFragment>
  .c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c3 {
  font-size: 1.125rem;
  line-height: 1.5rem;
  font-weight: undefined;
}

.c2 {
  font-size: 2.25rem;
  line-height: 2.5rem;
  max-width: 1200px;
  font-weight: 400;
  overflow-wrap: break-word;
  color: #2e2e2e;
}

.c4 {
  font-size: 1.125rem;
  line-height: 1.5rem;
  max-width: 30em;
  font-weight: undefined;
}

.c5 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: none;
  border-radius: 9999px;
  padding: 5px 18px;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: rgba(0, 0, 0, 0);
  color: #2e2e2e;
  border-style: solid;
  border-width: 1px;
  border-color: rgba(0, 0, 0, 0);
  border-radius: 9999px;
  font-weight: 500;
  padding: 5px 18px;
  text-align: center;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c5:hover {
  background-color: rgba(0, 0, 0, 0.04);
  color: #2e2e2e;
  border-color: rgba(0, 0, 0, 0);
  font-weight: 500;
}

.c5:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c5:focus >circle,
.c5:focus >ellipse,
.c5:focus >line,
.c5:focus >path,
.c5:focus >polygon,
.c5:focus >polyline,
.c5:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c5:focus ::-moz-focus-inner {
  border: 0;
}

.c5:focus:not(:focus-visible) {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c5:focus:not(:focus-visible) >circle,
.c5:focus:not(:focus-visible) >ellipse,
.c5:focus:not(:focus-visible) >line,
.c5:focus:not(:focus-visible) >path,
.c5:focus:not(:focus-visible) >polygon,
.c5:focus:not(:focus-visible) >polyline,
.c5:focus:not(:focus-visible) >rect {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c5:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

@media only screen and (max-width: 768px) {
  .c2 {
    font-size: 1.75rem;
    line-height: 2rem;
    max-width: 816px;
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <h1
        class="c2"
      >
        Heading
      </h1>
      <span
        class="c3"
      >
        Text
      </span>
      <p
        class="c4"
      >
        Paragraph
      </p>
      <button
        class="c5"
        type="button"
      >
        Button
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Skeleton Box skeleton loading 1`] = `
<DocumentFragment>
  .c3 {
  display: flex;
  box-sizing: border-box;
  background-color: #f7f7f7;
  color: #555555;
  height: 2.5rem;
  max-width: 200px;
  min-width: 150px;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  margin-top: 6px;
  margin-bottom: 6px;
  background-color: #f7f7f7;
  color: #555555;
  height: 1.125rem;
  min-width: 100px;
  width: 100px;
}

.c6 {
  display: flex;
  box-sizing: border-box;
  background-color: #f7f7f7;
  color: #555555;
  height: 1.125rem;
  width: 100%;
}

.c8 {
  display: flex;
  box-sizing: border-box;
  background-color: #f7f7f7;
  color: #555555;
  height: 1.125rem;
  width: 30%;
}

.c9 {
  display: flex;
  box-sizing: border-box;
  background-color: #f7f7f7;
  color: #555555;
  height: 1.5rem;
  min-width: 100px;
  padding-left: 18px;
  padding-right: 18px;
  padding-top: 5px;
  padding-bottom: 5px;
}

.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #ffffff;
  color: #555555;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  max-width: 30em;
}

.c7 {
  flex: 0 0 auto;
  align-self: stretch;
  height: 6px;
}

.c2 {
  font-size: 2.25rem;
  line-height: 2.5rem;
  max-width: 1200px;
  font-weight: 400;
  overflow-wrap: break-word;
  color: #2e2e2e;
}

@media only screen and (max-width: 768px) {
  .c3 {
    height: 2rem;
  }
}

@media only screen and (max-width: 768px) {
  .c7 {
    height: 3px;
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    font-size: 1.75rem;
    line-height: 2rem;
    max-width: 816px;
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <h1
        class="c2"
      >
        <div
          aria-hidden="true"
          class="c3"
        />
      </h1>
      <div
        aria-hidden="true"
        class="c4"
      />
      <div
        class="c5"
      >
        <div
          aria-hidden="true"
          class="c6"
        />
        <div
          class="c7"
        />
        <div
          aria-hidden="true"
          class="c6"
        />
        <div
          class="c7"
        />
        <div
          aria-hidden="true"
          class="c8"
        />
      </div>
      <div
        aria-hidden="true"
        class="c9"
        default=""
        option="[object Object]"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Skeleton Box skeleton sizes loading 1`] = `
<DocumentFragment>
  .c3 {
  display: flex;
  box-sizing: border-box;
  background-color: #f7f7f7;
  color: #555555;
  height: 1.75rem;
  max-width: 200px;
  min-width: 150px;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  margin-top: 6px;
  margin-bottom: 6px;
  background-color: #f7f7f7;
  color: #555555;
  height: 0.875rem;
  min-width: 100px;
  width: 100px;
}

.c6 {
  display: flex;
  box-sizing: border-box;
  background-color: #f7f7f7;
  color: #555555;
  height: 1.375rem;
  width: 100%;
}

.c8 {
  display: flex;
  box-sizing: border-box;
  background-color: #f7f7f7;
  color: #555555;
  height: 1.375rem;
  width: 30%;
}

.c9 {
  display: flex;
  box-sizing: border-box;
  background-color: #f7f7f7;
  color: #555555;
  height: 1.75rem;
  min-width: 100px;
  padding-left: 24px;
  padding-right: 24px;
  padding-top: 9px;
  padding-bottom: 9px;
}

.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #ffffff;
  color: #555555;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  max-width: 30em;
}

.c7 {
  flex: 0 0 auto;
  align-self: stretch;
  height: 6px;
}

.c2 {
  font-size: 1.5rem;
  line-height: 1.75rem;
  max-width: 624px;
  font-weight: 400;
  overflow-wrap: break-word;
  color: #2e2e2e;
}

@media only screen and (max-width: 768px) {
  .c3 {
    height: 1.5rem;
  }
}

@media only screen and (max-width: 768px) {
  .c7 {
    height: 3px;
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    font-size: 1.25rem;
    line-height: 1.5rem;
    max-width: 528px;
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <h2
        class="c2"
      >
        <div
          aria-hidden="true"
          class="c3"
        />
      </h2>
      <div
        aria-hidden="true"
        class="c4"
      />
      <div
        class="c5"
      >
        <div
          aria-hidden="true"
          class="c6"
        />
        <div
          class="c7"
        />
        <div
          aria-hidden="true"
          class="c6"
        />
        <div
          class="c7"
        />
        <div
          aria-hidden="true"
          class="c8"
        />
      </div>
      <div
        aria-hidden="true"
        class="c9"
        default=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Skeleton Box skeleton with specific dimensions 1`] = `
<DocumentFragment>
  .c2 {
  display: flex;
  box-sizing: border-box;
  margin-top: 6px;
  margin-bottom: 6px;
  background-color: #f7f7f7;
  color: #555555;
  height: 1.125rem;
  min-width: 100px;
  width: 100px;
}

.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #ffffff;
  color: #555555;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 192px;
  width: 384px;
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        aria-hidden="true"
        class="c2"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Skeleton Skeleton with theme 1`] = `
<DocumentFragment>
  .c2 {
  display: flex;
  box-sizing: border-box;
  margin-top: 6px;
  margin-bottom: 6px;
  background-color: #EDEDED;
  color: #444444;
  height: 18px;
  min-width: 100px;
  width: 100px;
  border: 1px solid blue;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #a2a8a8;
  color: #444444;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  border-radius: 6px;
}

@media only screen and (max-width: 768px) {
  .c1 {
    border-radius: 3px;
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        aria-hidden="true"
        class="c2"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Skeleton renders 1`] = `
<DocumentFragment>
  .c1 {
  display: flex;
  box-sizing: border-box;
  background-color: #f7f7f7;
  color: #555555;
  height: 1.5rem;
  width: 100%;
}

.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

<div
    class="c0"
  >
    <div
      aria-hidden="true"
      class="c1"
    />
  </div>
</DocumentFragment>
`;

exports[`Skeleton renders outside grommet wrapper 1`] = `
<DocumentFragment>
  .c0 {
  display: flex;
  box-sizing: border-box;
  background-color: #EDEDED;
  color: #444444;
  height: 24px;
  width: 100%;
}

<div
    aria-hidden="true"
    class="c0"
  />
</DocumentFragment>
`;

exports[`Skeleton with styling props 1`] = `
<DocumentFragment>
  .c1 {
  display: flex;
  box-sizing: border-box;
  margin: 12px;
  background: orange;
  height: 192px;
  width: 100%;
  border-radius: 12px;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

<div
    class="c0"
  >
    <div
      aria-hidden="true"
      class="c1"
    />
  </div>
</DocumentFragment>
`;
